--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
     "uuidv4": "^6.2.13",
     "zustand": "^4.0.0-rc.1"
   },
